# databucket

./: .env.example  .gitignore  CLAUDE.md  README.md  databucket  docker-compose.test.yaml  docker-compose.yaml  install.sh  pyproject.toml
.aios/: .gitignore  agent-instructions.md  context.yaml
.github/workflows/: auto-merge.yaml  ci.yaml
deploy/: pve3-create-lxc.sh  pve3-deploy.sh
docs/: architecture.md  usage.md
indexer/: Dockerfile  extractors.py  requirements.txt  server.py
mcp-server/: Dockerfile  pyproject.toml  server.py
scripts/: cleanup-test-buckets.py  install-hooks.sh  test.sh
tests/: conftest.py  test_cli_e2e.py  test_extractors.py  test_indexer.py  test_mcp_server.py
