[project]
name = "databucket"
version = "0.1.0"
description = "Unstructured data storage on MinIO"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
mcp = [
    "mcp[cli]>=1.0.0",
    "boto3>=1.35.0",
]
client = [
    "s3fs",
    "pandas",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring running MinIO and CLI",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
